--- a/src/Microsoft.AspNet.Identity/Resources.resx
+++ b/src/Microsoft.AspNet.Identity/Resources.resx
@@ -239,15 +239,11 @@
   </data>
   <data name="UserAlreadyHasPassword" xml:space="preserve">
     <value>User already has a password set.</value>
-    <comment>error when AddPassword called when a user already has a password</comment>
+    <comment>error when AddPasswordAsync called when a user already has a password</comment>
   </data>
   <data name="UserAlreadyInRole" xml:space="preserve">
     <value>User already in role.</value>
     <comment>Error when a user is already in a role</comment>
-  </data>
-  <data name="UserIdNotFound" xml:space="preserve">
-    <value>UserId not found.</value>
-    <comment>No user with this id found</comment>
   </data>
   <data name="UserNameNotFound" xml:space="preserve">
     <value>User {0} does not exist.</value>
