--- a/src/Microsoft.AspNet.Identity/Resources.resx
+++ b/src/Microsoft.AspNet.Identity/Resources.resx
@@ -198,7 +198,7 @@
     <comment>error when the store does not implement this interface</comment>
   </data>
   <data name="StoreNotIRoleClaimStore" xml:space="preserve">
-    <value>Store does not implement IRoleClaimStore&lt;TUser&gt;.</value>
+    <value>Store does not implement IRoleClaimStore&lt;TRole&gt;.</value>
     <comment>error when the store does not implement this interface</comment>
   </data>
   <data name="StoreNotIUserClaimStore" xml:space="preserve">
