--- a/src/Microsoft.AspNet.Identity/Resources.resx
+++ b/src/Microsoft.AspNet.Identity/Resources.resx
@@ -181,6 +181,10 @@
     <value>Lockout is not enabled for this user.</value>
     <comment>error when lockout is not enabled</comment>
   </data>
+  <data name="NoMessageProvider" xml:space="preserve">
+    <value>No IUserMessageProvider named '{0}' is registered.</value>
+    <comment>Error when there is no IUserMessageProvider</comment>
+  </data>
   <data name="NoTokenProvider" xml:space="preserve">
     <value>No IUserTokenProvider named '{0}' is registered.</value>
     <comment>Error when there is no IUserTokenProvider</comment>
