--- a/src/Microsoft.AspNet.Identity/Resources.resx
+++ b/src/Microsoft.AspNet.Identity/Resources.resx
@@ -277,13 +277,9 @@
     <value>User is not in role '{0}'.</value>
     <comment>Error when a user is not in the role</comment>
   </data>
-  <data name="LoggingIdentityResult" xml:space="preserve">
+  <data name="LoggingResult" xml:space="preserve">
     <value>{0} : {1}</value>
-    <comment>Logging statement for IdentityResult</comment>
-  </data>
-  <data name="LoggingSigninResult" xml:space="preserve">
-    <value>{0} : Result : {1}</value>
-    <comment>Logging statement for SignInResult</comment>
+    <comment>Logging statement for a result object</comment>
   </data>
   <data name="LoggingResultMessageForUser" xml:space="preserve">
     <value>{0} for user: {1}</value>
