--- a/src/Microsoft.AspNetCore.Identity/Resources.resx
+++ b/src/Microsoft.AspNetCore.Identity/Resources.resx
@@ -221,6 +221,10 @@
     <value>Store does not implement IRoleClaimStore&lt;TRole&gt;.</value>
     <comment>Error when the store does not implement this interface</comment>
   </data>
+  <data name="StoreNotIUserAuthenticationTokenStore" xml:space="preserve">
+    <value>Store does not implement IUserAuthenticationTokenStore&lt;User&gt;.</value>
+    <comment>Error when the store does not implement this interface</comment>
+  </data>
   <data name="StoreNotIUserClaimStore" xml:space="preserve">
     <value>Store does not implement IUserClaimStore&lt;TUser&gt;.</value>
     <comment>Error when the store does not implement this interface</comment>
@@ -255,6 +259,10 @@
   </data>
   <data name="StoreNotIUserSecurityStampStore" xml:space="preserve">
     <value>Store does not implement IUserSecurityStampStore&lt;TUser&gt;.</value>
+    <comment>Error when the store does not implement this interface</comment>
+  </data>
+  <data name="StoreNotIUserTokenStore" xml:space="preserve">
+    <value>Store does not implement IUserTokenStore&lt;User&gt;.</value>
     <comment>Error when the store does not implement this interface</comment>
   </data>
   <data name="StoreNotIUserTwoFactorStore" xml:space="preserve">
