--- a/src/Microsoft.Extensions.Identity.Core/Resources.resx
+++ b/src/Microsoft.Extensions.Identity.Core/Resources.resx
@@ -309,4 +309,8 @@
     <value>No RoleType was specified, try AddRoles&lt;TRole&gt;().</value>
     <comment>Error when the IdentityBuilder.RoleType was not specified</comment>
   </data>
+  <data name="NoRoleType" xml:space="preserve">
+    <value>No RoleType was specified, try AddRoles&lt;TRole&gt;().</value>
+    <comment>Error when the IdentityBuilder.RoleType was not specified</comment>
+  </data>
 </root>
