--- a/src/Core/Resources.resx
+++ b/src/Core/Resources.resx
@@ -309,4 +309,12 @@
     <value>No RoleType was specified, try AddRoles&lt;TRole&gt;().</value>
     <comment>Error when the IdentityBuilder.RoleType was not specified</comment>
   </data>
+  <data name="StoreNotIEncryptedUserStore" xml:space="preserve">
+    <value>Store does not implement IEncryptedUserStore&lt;TUser&gt; which is required when EncryptPersonalData = true.</value>
+    <comment>Error when the store does not implement this interface</comment>
+  </data>
+  <data name="NoPersonalDataEncryptor" xml:space="preserve">
+    <value>No IPersonalDataEncryptor service was registered, this is required when EncryptPersonalData = true.</value>
+    <comment>Error when there is no IPersonalDataEncryptor</comment>
+  </data>
 </root>
